added home template

--- a/templates/shop_base.html
+++ b/templates/shop_base.html
@@ -92,6 +92,11 @@
 
     {% include "navbar.html" %}
 
+    {% block content %}{% endblock %}
+
+
+    {% include "footer.html" %}
+
     
 
     <!-- Featured Start -->
