--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
-<!-- Featured Start -->
+{% extends 'base.html' %} 
+
+{% block content %}
 <div class="container-fluid pt-5">
     <div class="row px-xl-5 pb-3">
         <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
@@ -476,3 +478,8 @@
 
 <!-- Back to Top -->
 <a href="#" class="btn btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
+
+
+{% endblock %}
+
