--- a/payments/templates/payments/stripe_process.html
+++ b/payments/templates/payments/stripe_process.html
@@ -23,14 +23,14 @@
             {% else %}{% static "img/no_image.png" %}{% endif %}">
           </td>
           <td>{{ item.product.name }}</td>
-          <td class="num">${{ item.price }}</td>
+          <td class="num">Ksh: {{ item.price }}</td>
           <td class="num">{{ item.quantity }}</td>
-          <td class="num">${{ item.get_cost }}</td>
+          <td class="num">Ksh:{{ item.get_cost }}</td>
         </tr>
       {% endfor %}
       <tr class="total">
         <td colspan="4">Total</td>
-        <td class="num">${{ order.get_total_cost }}</td>
+        <td class="num">Ksh: {{ order.get_total_cost }}</td>
       </tr>
     </tbody>
   </table>
