--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,5 @@
+{% load static %} 
+
 <div class="container-fluid bg-secondary text-dark mt-5 pt-5">
     <div class="row px-xl-5 pt-5">
         <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
@@ -58,7 +60,7 @@
             </p>
         </div>
         <div class="col-md-6 px-xl-0 text-center text-md-right">
-            <img class="img-fluid" src="img/payments.png" alt="">
+            <img class="img-fluid" <img src="{% static 'images/payments.png' %}" alt="">
         </div>
     </div>
 </div>
