--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,9 +7,9 @@
                 <h1 class="mb-4 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border border-white px-3 mr-1">E</span>Soko</h1>
             </a>
             <p>Dolore erat dolor sit lorem vero amet. Sed sit lorem magna, ipsum no sit erat lorem et magna ipsum dolore amet erat.</p>
-            <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>123 Street, New York, USA</p>
+            <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>Kimanthi Street, Nairobi, Kenya</p>
             <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>info@example.com</p>
-            <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+012 345 67890</p>
+            <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+254 700 000 000</p>
         </div>
         <div class="col-lg-8 col-md-12">
             <div class="row">
