--- a/templates/404.html
+++ b/templates/404.html
@@ -1,11 +1,13 @@
-<head>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
+{% extends 'base.html' %} 
+
+{% block content %}
     <div class="mainbox">
-      <div class="err">4</div>
-      <i class="far fa-question-circle fa-spin"></i>
-      <div class="err2">4</div>
-      <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first place?<p>Let's go <a href="#">home</a> and try from there.</p></div>
+        <div class="center">
+     <strong><h2>4<i class="far fa-question-circle fa-spin"></i>4</h2></strong>
+        <h3>Oops! Page not found</h3>
         </div>
+            <div class="msg">Maybe this page moved? Got deleted?  Never existed in the first place?
+                <p>Let's go <a href="#">home</a> and try from there, or you can just <a href="{% url 'contact' %}">Contact us.</a></p></p></div>
+        </div>
+
+{% endblock  %}
