make an address default

--- a/orders/templates/orders/create.html
+++ b/orders/templates/orders/create.html
@@ -18,7 +18,7 @@
         </li>
       {% endfor %}
     </ul>
-    <p>Total: Ksh: {{ cart.get_total_price }}</p>
+    <p><b>Total: Ksh: {{ cart.get_total_price }}</b></p>
   </div>
   <hr>
   <br>
