--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link rel="stylesheet " href="{% static 'css/owl.carousel.min.css' %}">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link rel="stylesheet " href= "{% static 'css/style.css' %}">
