--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}
-  Your shopping cart
-{% endblock %}
+{% block title %} Your shopping cart {% endblock %}
 
 {% block content %}
   <h1>Your shopping cart</h1>
@@ -48,13 +46,42 @@
           </tr>
         {% endwith %}
       {% endfor %}
-      <tr class="total">
-        <td>Total</td>
-        <td colspan="4"></td>
-        <td class="num">KSh {{ cart.get_total_price }}</td>
-      </tr>
+      {% if cart.coupon %}
+<tr class="subtotal">
+<td>Subtotal</td>
+<td colspan="4"></td>
+<td class="num">ksh {{ cart.get_total_price|floatformat:2 }}</td>
+</tr>
+<tr>
+<td>
+"{{ cart.coupon.code }}" coupon
+({{ cart.coupon.discount }}% off)
+</td>
+<td colspan="4"></td>
+<td class="num neg">
+- KSH {{ cart.get_discount|floatformat:2 }}
+</td>
+</tr>
+{% endif %}
+<tr class="total">
+<td>Total</td>
+<td colspan="4"></td>
+<td class="num">
+KSH {{ cart.get_total_price_after_discount|floatformat:2 }}
+</td>
+</tr>
     </tbody>
   </table>
+  <p>Apply a coupon:</p>
+<form action="{% url "coupons:apply" %}" method="post">
+{{ coupon_apply_form }}
+<input type="submit" value="Apply">
+{% csrf_token %}
+</form>
+  <div class="cart-buttons">
+    <a href="{% url "shop:product_list" %}" class="button">Continue shopping</a>
+    <a href="{% url "cart:cart_clear" %}" class="button">Clear cart</a>
+    <a href="{% url "cart:cart_checkout" %}" class="button">Checkout</a>
   <p class="text-right">
     <a href="{% url "shop:product_list" %}" class="button
     light">Continue shopping</a>
