--- a/orders/templates/orders/create.html
+++ b/orders/templates/orders/create.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
   Checkout
@@ -8,29 +9,19 @@
   <h1>Checkout</h1>
   <div class="order-info">
     <h3>Your order</h3>
-
-    <h5>Cart Summary</h5>
     <ul>
       {% for item in cart %}
-      <li>
-      {{ item.quantity }}x {{ item.product.name }}
-      <span>KSH {{ item.total_price|floatformat:2 }}</span>
-      </li>
+        <li>
+          {{ item.quantity }}x {{ item.product.name }}
+          <span>KSH {{ item.total_price }}</span>
+        </li>
       {% endfor %}
-      {% if cart.coupon %}
-      <li>
-      "{{ cart.coupon.code }}" ({{ cart.coupon.discount }}% off)
-      <span class="neg">- KSH {{ cart.get_discount|floatformat:2 }}</span>
-      </li>
-      {% endif %}
-      </ul>
-    <p><b>Total: Ksh: {{ cart.get_total_price_after_discount|floatformat:2 }}</b></p>
+    </ul>
+    <p>Total: KSH {{ cart.get_total_price }}</p>
   </div>
-  <hr>
-  <br>
   <form method="post" class="order-form">
-    {{ form.as_p }}
-    <p><input type="submit" value="Place order"></p>
+    {{ form|crispy }}
     {% csrf_token %}
+    <p><input type="submit" value="Place order"></p>
   </form>
 {% endblock %}
