--- a/payments/templates/payments/mpesa_number.html
+++ b/payments/templates/payments/mpesa_number.html
@@ -1,31 +1,48 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block title %}
+Mpesa 
+{% endblock %}
 
 {% block content %} 
 
-<div class="order-info">
 
-    <h4><u>Your Order / Cart Summary</u></h4>
-       <br>
-    <ul>
-      {% for obj in objects_list%}
-        <li>
-          {{ obj.quantity }}x {{ obj.product.name }}
-          <span>Ksh: {{ obj.get_cost}}</span>
-        </li>
-    </ul>
-    <p>Total: Ksh: {{ order.get_total_price }}</p>
-    {% endfor %}
-  </div>
-  <hr>
-  <br>
+<P> ENTER YOUR MPESA NUMBER</P>
 
-<b><p>Kindly wait for Mpesa pin prompt on your phone, after submitting your number below</p></b>
-
-<h2> Enter Your Mpesa Number</h2>
-
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
+<form action = "" method = "POST">
+  {% csrf_token %}
+  {{form.as_p }}
+  <input type="submit" value=Submit>
 </form>
+<br>
+<br>
+<p>Kindly wait for Mpesa pin prompt on your phone, after submitting your number </p>
+
+
+<hr>
+<br>
+<br>
+<br>
+<p align="center">ITEMS IN THIS ORDER</p>
+<div class="card mb-3">
+  <div class="card-body">
+      <h6 class="card-title">Order Number: {{order.order_number}}</h6>
+      <hr>
+      <br>
+      {% for item in order.items.all %}
+      <h5 class="card-title">{{item.product.name}}</h5>
+     <p>
+      <img  style="width:50px;height:60px;" src="{% if item.product.thumb_nail %}{{ item.product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}" >
+      &nbsp;&nbsp;&nbsp;
+      QTY: {{ item.quantity }} &nbsp;&nbsp;
+     Price  KSH: {{ item.product.price }}
+     </p>
+      {% endfor %}
+  </div>
+         <hr>
+       <strong><P align="center">Order Total KSH:  {{order.get_total_cost}}</p></strong>
+          <br>
+          <br>
+</div>
 
 {% endblock  %}
