--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -7,6 +7,11 @@
 {% block content %}
   <div class="product-detail">
     <h1>{{ product.name }}</h1>
+   
+
+        <p align="right">
+        <a href="{% url 'shop:wishlist_add' product.id %}"><i class="fas fa-heart text-primary fa-2x"></i></a>
+        </p>
     <h2>
       <a href="{{ product.category.get_absolute_url }}">
         {{ product.category }}
