--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -56,9 +56,9 @@
     </tbody>
   </table>
   <p class="text-right">
-    <a href="{% url "shop:product_list" %}" class="button
+    <a href="{% url 'shop:product_list' %}" class="button
     light">Continue shopping</a>
-    <a href="{% url "orders:order_create" %}" class="button dark">Checkout</a>
+    <a href="{% url 'orders:delivery_method' %}" class="button dark">Checkout</a>
 
   </p>
 
