--- a/payments/templates/payments/bank_transfer.html
+++ b/payments/templates/payments/bank_transfer.html
@@ -32,7 +32,7 @@ Order Details
                         <br>
                         <br>
             </div>
-            <p align="center">HOW TO PAY USING BANK TRANSFER</p>
+            <h5 align="center">HOW TO PAY USING BANK TRANSFER</h5>
                         <p>
                         Please make your payment directly into our bank account. 
                         Use your Order Number as the payment reference. 
