--- a/orders/templates/orders/shipping_address.html
+++ b/orders/templates/orders/shipping_address.html
@@ -24,7 +24,7 @@
             <div class="card mb-5">
                 <div class="card-body">
                     <p class="card-title">
-                        <i class="fas fa-check-circle style="color:red"></i>
+                        <i class="fas fa-check-circle "></i>
                         1.HOME | OFFICE ADDRESS DETAILS  
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
