--- a/payments/templates/payments/mpesa_on_delivery.html
+++ b/payments/templates/payments/mpesa_on_delivery.html
@@ -32,7 +32,7 @@ Mpesa on Delivery
                         <br>
                         <br>
             </div>
-            <p align="center">HOW TO PAY WITH MPESA ON DELIVERLY / PICKUP</p>
+            <<h5 align="center">HOW VIA MPESA ON DELIVERY / PICKUP </h5>
                         <p>
                         You can pay before delivery or pickup, or
                         Pay during delivery or pickup.
